Fixing some broken links

--- a/content/_includes/carousel.html
+++ b/content/_includes/carousel.html
@@ -35,8 +35,7 @@
                 </div>
                 <div class="span6"><h2>Report Logs, Feature Usages, and more!</h2>
                     <p>You can send any type of event to your Exceptionless dashboard. Create tags for organization, and
-                        you've got a robust event logging system!</p><a href="signup/"
-                                                                        class="btn btn-large btn-primary">Sign up for
+                        you've got a robust event logging system!</p><a href="https://be.exceptionless.io/signup?domain=exceptionless.com&amp;type=organic" class="btn btn-large btn-primary">Sign up for
                         FREE!</a></div>
                 <div style="clear:both;"></div>
             </div>
