--- a/content/_redirects.njk
+++ b/content/_redirects.njk
@@ -6,6 +6,8 @@ layout:
 /feed/                                                                            /feed.xml
 /better-approach-running-azure-webjobs/                                           /news/2015/2015-12-08-better-approach-running-azure-webjobs/
 /why-we-upgraded-our-production-application-to-net-5-0/                           /news/2020/2020-09-24-why-we-upgraded-our-production-application-to-net-5-0/
+exceptionless-net-client-and-core-releases-bugs-usability-performance-self-hosting/                 /news/2017/2017-04-21-exceptionless-net-client-and-core-releases-bugs-usability-performance-self-hosting/
+
 {%- for post in collections.posts %}
 {%- set absolutePostUrl %}{{ post.url | url | absoluteUrl(metadata.url) }}{% endset %}
 /{{ post.data.title | slug }}/                                                    {{ absolutePostUrl }}
