more borken link fixes

--- a/content/_redirects.njk
+++ b/content/_redirects.njk
@@ -7,6 +7,21 @@ layout:
 /better-approach-running-azure-webjobs/                                           /news/2015/2015-12-08-better-approach-running-azure-webjobs/
 /why-we-upgraded-our-production-application-to-net-5-0/                           /news/2020/2020-09-24-why-we-upgraded-our-production-application-to-net-5-0/
 exceptionless-net-client-and-core-releases-bugs-usability-performance-self-hosting/                 /news/2017/2017-04-21-exceptionless-net-client-and-core-releases-bugs-usability-performance-self-hosting/
+march-update-rollup-new-releases-updates-bug-fixes/                               /news/2017/2017-04-04-march-update-rollup-new-releases-updates-bug-fixes
+/sending-log-messages-to-exceptionless/                                           /news/2015/2015-03-31-sending-log-messages-to-exceptionless
+/better-approach-running-azure-webjobs/                                           /news/2015/2015-12-08-better-approach-running-azure-webjobs
+/simple-app-deployment-azure-continuous-deployment-github/                        /news/2016/2016-03-16-simple-app-deployment-azure-continuous-deployment-github/
+/exceptionless-4-0-net-core-asp-net-core-support/                                 /news/2016/2016-06-28-exceptionless-4-0-net-core-asp-net-core-support/
+/exceptionless-api-usage-and-overview/                                            /news/2015/2015-05-06-exceptionless-api-usage-and-overview/
+/new-releases-for-all-the-codes-exceptionless-3-2/                                /news/2016/2016-01-27-new-releases-for-all-the-codes-exceptionless-3-2/
+/track-view-user-session-data-exceptionless/                                      /news/2016/2016-02-01-track-view-user-session-data-exceptionless/
+/set-application-version-for-improved-regression-notifications-and-stacking/      /news/2016/2016-08-08-set-application-version-for-improved-regression-notifications-and-stacking/
+/add-reverse-geocoding-to-your-app/                                               /news/2016/2016-02-10-add-reverse-geocoding-to-your-app/
+/introducing-foundatio-3-0-async-efficiency/                                      /news/2015/2015-10-22-introducing-foundatio-3-0-async-efficiency
+/foundatio-featured-net-blog-version-4-0-release/                                 /news/2016/2016-04-07-foundatio-featured-net-blog-version-4-0-release/
+/session-heartbeats-no-longer-count-towards-plan-limits/                          /news/2016/2016-05-26-session-heartbeats-no-longer-count-towards-plan-limits/
+/filter-improvements-exceptionless-single-page-app/                               /news/2016/2016-03-24-filter-improvements-exceptionless-single-page-app/        
+/custom-event-stacking-in-exceptionless/                                          /docs/manual-stacking
 
 {%- for post in collections.posts %}
 {%- set absolutePostUrl %}{{ post.url | url | absoluteUrl(metadata.url) }}{% endset %}
