more link fixes

--- a/content/_redirects.njk
+++ b/content/_redirects.njk
@@ -22,6 +22,19 @@ march-update-rollup-new-releases-updates-bug-fixes/                             
 /session-heartbeats-no-longer-count-towards-plan-limits/                          /news/2016/2016-05-26-session-heartbeats-no-longer-count-towards-plan-limits/
 /filter-improvements-exceptionless-single-page-app/                               /news/2016/2016-03-24-filter-improvements-exceptionless-single-page-app/        
 /custom-event-stacking-in-exceptionless/                                          /docs/manual-stacking
+/making-move-elastic-search-exceptionless-2-0/                                    /news/2014/2014-09-03-making-move-elastic-search-exceptionless-2-0
+/filter-your-exceptions-video-demo                                                /news/2014/2014-12-07-filter-your-exceptions-video-demo
+/exceptionless-3-0-changes-to-build-process-dependencies-self-hosting/            /news/2015/2015-07-23-exceptionless-3-0-changes-to-build-process-dependencies-self-hosting
+/exceptionless-3-1-released-if-you-thought-it-was-fast-before/                    /news/2015/2015-10-28-exceptionless-3-1-released-if-you-thought-it-was-fast-before
+/foundatio-pluggable-blocks-building-distributed-apps/                            /news/2015/2015-07-14-foundatio-pluggable-blocks-building-distributed-apps
+/javascript-node-js-client-version-1-release-candidate/                           /news/2015/2015-06-04-javascript-node-js-client-version-1-release-candidate
+/javascript-node-js-client-v1-release-notes/                                      /news/2015/2015-06-09-javascript-node-js-client-v1-release-notes
+/javascript-client-available-for-preview-testing/                                 /news/2015/2015-05-13-javascript-client-available-for-preview-testing
+/exceptionless-node-js-javascript-client-demo/                                    /news/2015/2015-05-20-exceptionless-node-js-javascript-client-demo
+/its-go-time-exceptionless-2-0-launched/                                          /news/2015/2015-03-12-its-go-time-exceptionless-2-0-launched
+/bulk-actions-sneak-peak-exceptionless-2-0-video/                                 /news/2014/2014-12-12-bulk-actions-sneak-peak-exceptionless-2-0-video                             
+/angularjs-exceptionless-2-0/                                                     /news/2014/2014-10-23-angularjs-exceptionless-2-0                           
+/upcoming-exceptionless-version-2-0-overview-review/                              /news/2014/2014-08-13-upcoming-exceptionless-version-2-0-overview-review
 
 {%- for post in collections.posts %}
 {%- set absolutePostUrl %}{{ post.url | url | absoluteUrl(metadata.url) }}{% endset %}
