proof of concept for simple docs search

--- a/content/_layouts/docs.njk
+++ b/content/_layouts/docs.njk
@@ -13,8 +13,20 @@ layout: default
       {% include "docs-toc.html" %}
     </div>
     <div class="well span9 docs">
+      <h3>Search Docs</h3>
+      <input type='text' id='search-input' />
+      <button onclick='handleSearch()'>Search</button>
+      <button onclick='clearSearch()' id='clear-button' style='display: none;'>Clear</button>
+    </div>
+    <div id='main-docs' class="well span9 docs">
       <h1>{{ title }}</h1>
-      {{ content | safe }}
+      {{ content | safe }}   
+    </div>
+    <div class="well span9 docs" id='search-results' style='display: none;'>
+      <h3>Here be the results</h3>
+      <ul id='results-ul'>
+
+      </ul>
     </div>
   </div>
 </div>
@@ -24,5 +36,45 @@ layout: default
         const menu = document.querySelector('.toc');
         menu.classList.toggle('hidden-toc');
         menu.classList.toggle('visible-toc');
+    }
+    const handleSearch = async () => {
+      console.log("searching...");
+      const docsContainer = document.getElementById('main-docs');
+      docsContainer.style.display = 'none';
+      const resultsContainer = document.getElementById('search-results');
+      resultsContainer.style.display = 'block';
+      const searchTerm = document.getElementById('search-input').value;
+      const clearButton = document.getElementById('clear-button');
+      clearButton.style.display = 'block';
+      const res = await fetch(`${window.location.origin}/assets/index.json`);
+      const data = await res.json();
+      const keys = Object.keys(data);
+      let docs = [];
+      for(const key of keys) {
+        docs.push(data[key]);
+      }
+      const uniqueDocs = [...new Set(docs)];
+      
+      const filtered = uniqueDocs.filter((doc) => doc.title.includes(searchTerm) || doc.content.includes(searchTerm));
+      const ul = document.getElementById('results-ul');
+      for(const item of filtered) {
+        const newItem = document.createElement('li');
+        const anchor = document.createElement('a');
+        anchor.setAttribute('href', `${window.location.origin}/docs/${item.basename}`);
+        anchor.innerText = item.title;
+        newItem.appendChild(anchor);        
+        
+        ul.appendChild(newItem);
+      }
+    }
+    const clearSearch = () => {
+      const clearButton = document.getElementById('clear-button');
+      const searchInput = document.getElementById('search-input');
+      searchInput.value = '';
+      clearButton.style.display = 'none';
+      const docsContainer = document.getElementById('main-docs');
+      docsContainer.style.display = 'block';
+      const resultsContainer = document.getElementById('search-results');
+      resultsContainer.style.display = 'none';
     }
 </script>
