--- a/content/assets/css/custom.css
+++ b/content/assets/css/custom.css
@@ -181,9 +181,10 @@ a.deeplink:hover {
     border-color: #4C7701 #4C7701 #000;
     border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
     filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-    margin-left: 8px;
     box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), 0 1px 2px rgba(0,0,0,0.05);
     -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), 0 1px 2px rgba(0,0,0,0.05);
+    height: 25px;
+    font-size: 8px;
 }
 
 @media (min-width: 768px) {
