--- a/content/_layouts/docs.njk
+++ b/content/_layouts/docs.njk
@@ -20,97 +20,13 @@ layout: default
       <h1>{{ title }}</h1>
       {{ content | safe }}   
     </div>
-    <div class="well span9 docs" id='search-results' style='display: none;'>
-      <h3>Search Results</h3>
-      <div id='results-ul'>
-
-      </div>
-    </div>
   </div>
 </div>
 
 <script>
-    const ul = document.getElementById('results-ul');
-    let updatedWordsToDisplay = [];
-    const handleMenu = () => {
-        const menu = document.querySelector('.toc');
-        menu.classList.toggle('hidden-toc');
-        menu.classList.toggle('visible-toc');
-    }
-
-    const clearResults = async () => {
-      return new Promise((resolve) => {
-        updatedWordsToDisplay = [];        
-        if(ul) {
-          while (ul.firstChild) {
-          ul.removeChild(ul.firstChild);
-          }
-        }
-        resolve();
-      })
-    }
-
     const handleSearch = async () => {
-      await clearResults();
-      const docsContainer = document.getElementById('main-docs');
-      docsContainer.style.display = 'none';
-      const resultsContainer = document.getElementById('search-results');
-      resultsContainer.style.display = 'block';
       const searchTerm = document.getElementById('search-input').value;
-      const res = await fetch(`${window.location.origin}/assets/index.json`);
-      const data = await res.json();
-      const keys = Object.keys(data);
-      let docs = [];
-      for(const key of keys) {
-        docs.push(data[key]);
-      }
-
-      const uniqueDocs = [...new Set(docs)];
-      
-      const filtered = uniqueDocs.filter((doc) => doc.title.includes(searchTerm) || doc.content.includes(searchTerm));
-
-      for(const item of filtered) {
-        const newItem = document.createElement('p');
-        const anchor = document.createElement('a');
-        const summary = document.createElement('span');
-        const path = item.path.split('./content/')[1].split('.')[0]
-        anchor.setAttribute('href', `${window.location.origin}/${path}`);
-        anchor.style.cursor = 'pointer';
-        anchor.innerText = item.title;
-
-        newItem.appendChild(anchor);   
-
-        const searchIndex = item.content.search(searchTerm);    
-
-        const searchArray = item.content.split(' ');
-        const searchArrayIndex = searchArray.indexOf(searchTerm);
-        
-        let previewText = "No preview available";
-        if(searchArrayIndex > -1) {
-          const wordsToDisplayArray = searchArray.slice(searchArrayIndex - 10, searchArrayIndex + 2);
-          for(const word of wordsToDisplayArray) {
-            if(word === searchTerm) {
-              updatedWordsToDisplay.push(`<mark>${word}</mark>`)
-            } else {
-              updatedWordsToDisplay.push(word);
-            }
-          }
-          previewHtml = `<p>...${updatedWordsToDisplay.join(' ')}...</p>`
-        }
-        summary.innerHTML = previewHtml;
-        newItem.appendChild(summary);
-
-        ul.appendChild(newItem);
-      }
-    }
-
-    const clearSearch = async () => {      
-      await clearResults();
-      const searchInput = document.getElementById('search-input');
-      searchInput.value = '';      
-      const docsContainer = document.getElementById('main-docs');
-      docsContainer.style.display = 'block';
-      const resultsContainer = document.getElementById('search-results');
-      resultsContainer.style.display = 'none';
+      const queryString = encodeURI(searchTerm)
+      window.location.replace(`/search?term=${queryString}`);
     }
 </script>
