--- a/content/_layouts/docs.njk
+++ b/content/_layouts/docs.njk
@@ -24,6 +24,14 @@ layout: default
 </div>
 
 <script>
+    document.addEventListener("DOMContentLoaded", async () => {
+      const search = document.getElementById('search-input')
+        search.addEventListener('keyup', ({key}) => {
+          if (key === "Enter") {
+            handleSearch();
+          }
+        })
+    })
     const handleSearch = async () => {
       const searchTerm = document.getElementById('search-input').value;
       const queryString = encodeURI(searchTerm)
