--- a/content/_layouts/docs.njk
+++ b/content/_layouts/docs.njk
@@ -10,13 +10,13 @@ layout: default
   <div id="responsive-menu"><button class="btn btn-primary" onclick="handleMenu()">Table of Contents</button></div>
   <div id="content" class="row-fluid">
     <div class="toc well span3 visible-toc">
-      <div style="display: flex; flex-direction: row; align-items: space-between; justify-content: space-between;">
-        <input type="text" id="search-input" placeholder="Search docs" /><br/>        
-        <button style="width: 40% margin: auto; margin-left: 5px;" class="btn-primary" onclick="handleSearch()">Search</button>
+      <div class="input-append">
+        <input class="span9" id="search-input" type="text" placeholder="Search docs...">
+        <button class="btn" type="button" onclick="handleSearch()">Go!</button>
       </div>
       {% include "docs-toc.html" %}
     </div>
-    <div id="main-docs" class="well span9 docs">
+    <div class="well span9 docs">
       <h1>{{ title }}</h1>
       {{ content | safe }}   
     </div>
@@ -24,6 +24,12 @@ layout: default
 </div>
 
 <script>
+    const handleMenu = () => {
+        const menu = document.querySelector(".toc");
+        menu.classList.toggle("hidden-toc");
+        menu.classList.toggle("visible-toc");
+    }
+
     document.addEventListener("DOMContentLoaded", async () => {
       const search = document.getElementById("search-input")
         search.addEventListener("keyup", ({key}) => {
@@ -35,6 +41,6 @@ layout: default
     const handleSearch = async () => {
       const searchTerm = document.getElementById("search-input").value;
       const queryString = encodeURI(searchTerm)
-      window.location.replace(`/search?term=${queryString}`);
+      window.location = `/search?term=${queryString}`;
     }
 </script>
