--- a/content/assets/css/custom.css
+++ b/content/assets/css/custom.css
@@ -167,6 +167,10 @@ a.deeplink:hover {
     line-height: 2em;
 }
 
+/* .docs h1, .docs h2, .docs h3, .docs h4 {
+    color: #282828;
+} */
+
 @media (min-width: 768px) {
     .row-fluid .span6.smaller {
         width: 46% !important;
