--- a/content/_includes/intercom.njk
+++ b/content/_includes/intercom.njk
@@ -1,7 +1,7 @@
 <!-- intercom -->
 <script>
 window.intercomSettings = {
-    app_id: "6c0d76e0bec950052459f5cb4b727a949aeabbe1"
+    app_id: "{{ site.intercomId }}"
 };
 </script>
 
